--- a/css/syles.css
+++ b/css/syles.css
@@ -20,3 +20,20 @@ em {
   color: red;
   font-size: 12px
 }
+.aboutme {
+  font-size: 65px;
+  background-color: beige;
+  color: black;
+  margin-bottom: 0%
+  padding-bottom: 20%
+}
+body {
+  background-color: beige
+}
+img {
+  height: 300px;
+  width: 200px;
+  float: none;
+  align-content: center;
+  margin-left: 200px
+}
