--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
 h1 {
-  color: blue;
+  color: red;
   text-align: center;
 }
 h2 {
-  color: green;
+  color: blue;
   font-style: oblique;
   text-align: center;
 }
@@ -15,6 +15,7 @@ strong {
 }
 em {
   font-style: italic;
+  font-color: red;
 }
 .Duncan {
   color: red;
@@ -31,8 +32,8 @@ body {
   background-color: beige
 }
 img {
-  height: 300px;
-  width: 200px;
+  height: 750px;
+  width: 700px;
   float: none;
   align-content: center;
   margin-left: 200px
