--- a/css/styles.css
+++ b/css/styles.css
@@ -4,12 +4,17 @@ h1 {
   text-align: center;
 }
 h2 {
-  color: blue;
+  color: red;
   font-style: oblique;
   text-align: center;
 }
+h3 {
+  color: red;
+  font-style:
+}
 p {
   font-family: monospace;
+  font-color: white;
 }
 strong {
   font-style: bold;
@@ -33,8 +38,8 @@ body {
   background-color: beige
 }
 img {
-  height: 1000px;
-  width: 900px;
+  height: 250px;
+  width: 250px;
   float: none;
   align-content: center;
   margin-left: 200px
@@ -42,4 +47,7 @@ img {
 p {
   font-size: 15px;
   font-style: normal;
+}
+.photo {
+  background-color: whiteS
 }
