--- a/css/styles.css
+++ b/css/styles.css
@@ -30,12 +30,12 @@ em {
 .aboutme {
   font-size: 65px;
   background-color: beige;
-  color: black;
+  color: white;
   margin-bottom: 0%
   padding-bottom: 20%
 }
 body {
-  background-color: beige
+  background-color: white;
 }
 img {
   height: 250px;
@@ -49,5 +49,8 @@ p {
   font-style: normal;
 }
 .photo {
-  background-color: whiteS
+  background-color: ;
+}
+@media () {
+
 }
