--- a/css/styles.css
+++ b/css/styles.css
@@ -51,6 +51,18 @@ p {
 .photo {
   background-color: ;
 }
-@media () {
+@media screen and (min-width: 480px) and (max-width: 767px) {
+   body {
+     background-color: black;
+     color: white;
+    }
+   }
+}
+@media screen and (min-width: 768px) {
+  body {
+    background-color: yellowgreen;
+  }
+}
 
+  
 }
