--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,5 @@
 html {
-  background: url(./../images/undraw_reading_time_gvg0.svg) no-repeat center center fixed;
+  background: url(./../images/web.jpg) no-repeat center center fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  -o-background-size: cover;
